fix alignment

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   background-size: cover;
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 body::after {
